--- a/author.yaml
+++ b/author.yaml
@@ -1,4 +1,4 @@
 author:
-  firstname: "YOUR"
-  lastname: "NAME"
-  email: "YOURNAME@example.com"
+  firstname: "Nikhil"
+  lastname: "Deekonda"
+  email: "ndeekond@mail.yu.edu"
